--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,18 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: "Poppins";
 }
 
 main {
-  background: #eaf3f0;
+  background: #e5e5e5;
   height: 100vh;
 }
 
 .header {
   display: flex;
   justify-content: center;
-  background: #355837;
+  background: #2d4a22;
   height: 12rem;
 }
 
@@ -31,21 +32,21 @@ header > h2 {
 }
 
 .main-box > .title {
-  width: 64%;
+  width: 62%;
   text-align: start;
   margin-bottom: 0.25rem;
   color: white;
 }
 
 .box {
-  background: #ffff;
+  background: #ffffff;
   width: 60%;
   border-radius: 4px;
   padding: 1.25rem;
   margin-bottom: 15px;
 }
 .box.total {
-  background: #5fb045;
+  background: #49aa26;
   color: white;
   font-weight: bold;
 }
