--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,61 @@
+/* ======== GLOBAL ======== */
 * {
   margin: 0;
   padding: 0;
-  font-family: "Poppins";
+  box-sizing: border-box;
 }
 
-main {
+body {
   background: #e5e5e5;
   height: 100vh;
+  font-family: "Poppins", sans-serif;
 }
 
+.container {
+  width: 100vw;
+  margin: auto;
+}
+
+/* ======== TITLES ======== */
+
+h2 {
+  margin-top: 3.2rem;
+  margin-bottom: 0.8rem;
+  color: #363f5f;
+
+  font-weight: normal;
+}
+
+/* ======== HEADER ======== */
 .header {
-  display: flex;
-  justify-content: center;
   background: #2d4a22;
-  height: 12rem;
+  padding: 2rem 2rem 6rem 6rem;
+  text-align: center;
 }
 
-header {
-  margin-top: 2.25rem;
-}
-
-header > h2 {
+header > h1 {
   color: white;
+  font-weight: 100;
 }
 
+/* ======== BALANCE ======== */
 #balance {
-  display: flex;
-  align-items: center;
   flex-direction: column;
-  margin-top: -3.75rem;
+  margin-top: -8rem;
 }
 
-#balance > .title {
-  width: 63%;
-  margin-bottom: 0.25rem;
+#balance > .title > h2 {
   color: white;
 }
+
+/* ======== CARD ======== */
 
 .card {
   background: #ffffff;
   width: 60%;
   border-radius: 4px;
-  padding: 2.25rem;
-  margin-bottom: 15px;
+  padding: 1.5rem 2rem;
+  margin-bottom: 2rem;
 }
 
 .card > h4 {
@@ -54,20 +67,17 @@ header > h2 {
   font-size: 1.2rem;
   color: #363f5f;
 }
+
 .card.total {
   background: #49aa26;
   color: white;
   font-weight: bold;
 }
 
-#transaction {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
+/* ======== TRANSACTION ======== */
 
 #transaction > table {
-  width: 64%;
+  width: 60%;
 }
 
 th {
@@ -111,8 +121,7 @@ td:last-child {
 }
 
 footer {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   margin-top: 2rem;
   color: #969cb2;
 }
