--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,21 @@ body {
   width: min(90vw, 800px);
   margin: auto;
 }
+/* ======== LINKS AND BUTTON ======== */
+a {
+  color: #49aa26;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+a:hover {
+  filter: brightness(1.1);
+}
+
+.button.new {
+  display: inline-block;
+  margin-bottom: 0.8rem;
+}
 
 /* ======== TITLES ======== */
 
@@ -121,7 +136,7 @@ td {
   padding: 1rem 2rem;
 }
 
-table tr:hover {
+table tbody tr:hover {
   filter: brightness(0.8);
 }
 
