--- a/styles.css
+++ b/styles.css
@@ -114,10 +114,13 @@ header > h1 {
 #transaction > table {
   display: block;
   width: 100%;
+  overflow-x: auto;
+}
+
+.data-table {
+  width: 100%;
   border-spacing: 0 0.5rem;
   color: #969cb2;
-
-  overflow-x: auto;
 }
 
 th:first-child,
@@ -171,8 +174,5 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
-  }
-
-  #transaction {
   }
 }
