--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ header > h1 {
 
 /* ======== TRANSACTION ======== */
 
-#transaction > table {
+#transaction {
   display: block;
   width: 100%;
   overflow-x: auto;
@@ -157,6 +157,8 @@ table tbody tr:hover {
   color: var(--dark-blue);
 }
 
+/* ======== TRANSACTION ======== */
+
 footer {
   text-align: center;
   margin-top: 2rem;
@@ -164,6 +166,17 @@ footer {
   opacity: 0.6;
 }
 
+/* ======== MODAL ======== */
+.modal-overlay {
+  position: fixed;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  left: 0;
+  top: 0;
+}
 /* ======== RESPONSIVE ======== */
 @media (min-width: 800px) {
   html {
