--- a/styles.css
+++ b/styles.css
@@ -173,6 +173,7 @@ footer {
   background-color: rgba(0, 0, 0, 0.4);
   width: 100%;
   height: 100%;
+  overflow: auto;
   z-index: 1;
   left: 0;
   top: 0;
@@ -183,13 +184,58 @@ footer {
   width: 568px;
   height: 343px;
   padding: 20px;
-  background: #ffffff;
+  border: 1px solid #888;
+  border-radius: 10pxs;
+  background: #e5e5e5;
+}
+
+.modal h2 {
+  margin-top: 1rem;
+  margin-bottom: 0.8rem;
 }
 
 .input-box {
   display: flex;
   flex-direction: column;
 }
+
+.input-box input {
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  margin-bottom: 0.75rem;
+}
+
+.input-box p {
+  margin-bottom: 0.75rem;
+  font-weight: normal;
+  font-size: 0.8rem;
+  color: var(--dark-blue);
+}
+
+.button-box {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-box button {
+  border: none;
+  font-weight: bold;
+  width: 47%;
+  padding: 1rem;
+  font-family: "Poppins", sans-serif;
+}
+
+.button-box .cancel {
+  color: #e92929;
+  border: 2px solid #e92929;
+}
+
+.button-box .save {
+  color: white;
+  background: #49aa26;
+}
+
 /* ======== RESPONSIVE ======== */
 @media (min-width: 800px) {
   html {
