--- a/styles.css
+++ b/styles.css
@@ -168,6 +168,7 @@ footer {
 
 /* ======== MODAL ======== */
 .modal-overlay {
+  display: none;
   position: fixed;
   background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
@@ -224,6 +225,7 @@ footer {
   width: 47%;
   padding: 1rem;
   font-family: "Poppins", sans-serif;
+  cursor: pointer;
 }
 
 .button-box .cancel {
@@ -234,6 +236,11 @@ footer {
 .button-box .save {
   color: white;
   background: #49aa26;
+}
+
+.cancel:hover,
+.save:hover {
+  filter: brightness(0.9);
 }
 
 /* ======== RESPONSIVE ======== */
