creating the label

--- a/styles.css
+++ b/styles.css
@@ -185,8 +185,7 @@ footer {
   width: 568px;
   height: 343px;
   padding: 20px;
-  border: 1px solid #888;
-  border-radius: 10pxs;
+  border-radius: 10px;
   background: #e5e5e5;
 }
 
